updated title page

--- a/treatmenteffects/sections/0_abstract.tex
+++ b/treatmenteffects/sections/0_abstract.tex
@@ -1,3 +1,1 @@
-\begin{abstract}
-This project studies adult gender differences through the impact of early childhood education on skill formation. We consider mediators at different points in the life-cycle. Using these mediators, we study the mechanisms through which early childhood education develops skills, and how these skills then affect life-relevant outcomes. We use early and school-age measures of cognitive and non-cognitive skills to mediate adult educational attainment. This in turn mediates labor income and criminal activity. We find that non-cognitive skills mediate years of education 
-\end{abstract}
+\noindent in progress
